fixes excessive spacing issues in the print stylesheet

--- a/theme/style.css
+++ b/theme/style.css
@@ -1474,6 +1474,10 @@ table {
 	#masthead { display:none;}
 	#secondary { display:none;}
 	#colophon { display:none; }
+	#main {
+		margin:0;
+		padding:0;
+	}
 	#primary {
 		float:none;
 		width:auto;
@@ -1481,6 +1485,7 @@ table {
 	}
 	article {
 		padding:0;
+		margin:0;
 		box-shadow:none;
 	}
 }
